--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       <h1>Tic Tac Toe</h1>
 
       <div class="game-actions">
-        <button class="btn btn-primary btn-create" type="submit" data-toggle="create" data-target=".board">Play New Game!</button>
+        <button class="btn btn-primary btn-create" type="submit" data-toggle="create" data-target=".board" style="display: block;">Play New Game!</button>
         <div class="winner"></div>
         <div class="banner"></div>
       </div>
@@ -183,7 +183,7 @@
       </div> -->
     <!-- </div> -->
 
-    <button type="button" name="button" class="btn-index btn btn-primary">Show Games Played</button>
+    <button type="button" name="button" class="btn-index btn btn-primary" style="display: block;">Show Games Played</button>
 
     <div class="showgames"></div>
 
